Adding weather stuff

--- a/public/index.html
+++ b/public/index.html
@@ -21,17 +21,27 @@
 		</div>	
 		<div id="weather" class="top">
 			<div id="today">
-				<i></i>
-				<div class="now"></div>
-				<div class="high"></div>
-				<div class="low"></div>
+				<div class="todayIcon">
+					<span class="description"></span>
+					<i></i>
+				</div>
+				<div class="temps">
+					<div>
+						<span class="now"></span>
+					</div>
+					<div class="hilo">
+						<span class="high"></span> | <span class="low"></span>
+					</div>
+				</div>
+				<br class="clear" />
 			</div>
 			<div id="forecast"></div>
 			<div id="forecastItem" class="hidden">
 				<i></i>
-				<div class="high"></div>
-				<div class="low"></div>
-				<div class="date"></div>
+				<div class="temps">
+					<span class="high"></span> | <span class="low"></span>
+				</div>
+				<div class="day"></div>
 			</div>
 		</div>
 		<div id="news" class="bottom">
