--- a/public/index.html
+++ b/public/index.html
@@ -11,18 +11,17 @@
 	</head>
 	<body>
 		<div id="datetime" class="top">
-			<div id="time"></div>
-			<div id="dateContainer">
+			<div id="timeContainer">
+				<div id="time"></div>
 				<div id="period"></div>
-				<div id="date"></div>
-				<div id="year"></div>	
 			</div>
-				
-		</div>	
+			<div id="date"></div>
+		</div>
+
 		<div id="weather" class="top">
 			<div id="today">
+				<span class="description"></span>
 				<div class="todayIcon">
-					<span class="description"></span>
 					<i></i>
 				</div>
 				<div class="temps">
@@ -44,13 +43,9 @@
 				<div class="day"></div>
 			</div>
 		</div>
+		
 		<div id="news" class="bottom">
-			News <i class="wi wi-day-lightning"></i>
+			News
 		</div>
 	</body>
 </html>
-
-
-
-
-
